# zephyr-lighting-control-unit

./: CMakeLists.txt  mcuboot.conf  prj.conf
.github/workflows/: build.yml
.run/: Flash App.run.xml  Flash MCUboot.run.xml  GDB via Debug Server.run.xml
boards/hydrogreen/lighting_control_unit/: lighting_control_unit.dts
peripherals/: can.c  can.h  gpio.c
src/: lcu_dfu.c  lcu_dfu.h  lighting_control_unit.c  lighting_control_unit.h  main.c
tools/: build_app.py  build_bootloader.py  dfu_can.py  flash_app.py  flash_bootloader.py  lights_can.py  patch_elf_mcuboot_header.py
